# talent_intelligence

./: .env  .env.example  .gitignore  README.md  TalentIntelligence_Presentation.pptx  clear_and_demo_seed.py  create_db.py  debug_seed.py  demo_seed.py  docker-compose.yml  requirements.txt  run_seed.py  talent_dev.db  test_db.py
agentic-retraining-loop/: .env.example  .gitignore  Dockerfile  Makefile  README.md  dashboard.py  docker-compose.yml  pyproject.toml
agentic-retraining-loop/agents/: __init__.py  approval_agent.py  deploy_agent.py  drift_monitor.py  eval_agent.py  train_agent.py
agentic-retraining-loop/api/: main.py  routes.py  schemas.py
agentic-retraining-loop/config/: settings.py
agentic-retraining-loop/data/sample/: production_drift.parquet  production_nodrift.parquet  reference.parquet  sensor_drift.parquet  sensor_nodrift.parquet
agentic-retraining-loop/db/: models.py  session.py
agentic-retraining-loop/graph/: __init__.py  edges.py  retraining_graph.py  state.py
agentic-retraining-loop/scripts/: demo_run.py  generate_sample_data.py  generate_sensor_data.py  train_baseline_model.py
agentic-retraining-loop/tests/: test_drift_monitor.py
backend/: config.py  main.py  middleware.py  observability.py
backend/chains/: domain_router.py  explanation_chain.py  (+3 more)
contextlens/: .env.example  .gitignore  README.md  app.py  pyproject.toml
frontend/: index.html  package-lock.json
kpi_trend_rag/: .env.example  .gitignore  README.md  app.py  kpi_sample_data.csv  requirements.txt
talent-intelligence/: .env.example  .gitignore  README.md  run_seed.py
(+62 files in other folders)
