[project]
name = "agentic-retraining-loop"
version = "0.1.0"
requires-python = ">=3.10"

[project.dependencies]
langgraph = ">=0.1.0"
langchain = ">=0.2.0"
fastapi = ">=0.111.0"
uvicorn = {extras = ["standard"]}
sqlalchemy = ">=2.0"
alembic = ">=1.13"
psycopg2-binary = ">=2.9"
pydantic-settings = ">=2.0"
mlflow = ">=2.13"
scikit-learn = ">=1.4"
pandas = ">=2.0"
pyarrow = ">=16.0"
scipy = ">=1.13"
slack-sdk = ">=3.27"
loguru = ">=0.7"
python-dotenv = ">=1.0"
streamlit = ">=1.35"
plotly = ">=5.22"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff", "mypy"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
